# eos-cpp

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
include/eos/: CubicEosBase.hpp  IdentityCorrectionFactor.hpp  MathematicalConstants.hpp  PengRobinsonEos.hpp  SoaveCorrectionFactor.hpp  SoaveRedlichKwongEos.hpp  VanDerWaalsEos.hpp  constants.hpp  correction_policy.hpp  corrector.hpp  cubic_eos.hpp  cubic_eos_base.hpp  eos.hpp  flash.hpp  isothermal_line.hpp  lucas.hpp  lucas_method.hpp  no_correction_policy.hpp  peng_robinson_eos.hpp  pr_eos.hpp  roots.hpp  soave_correction_factor.hpp  soave_correction_policy.hpp  soave_redlich_kwong_eos.hpp  srk_eos.hpp  van_der_waals_eos.hpp  vapor_liquid_flash.hpp  vdw_eos.hpp
include/eos/common/: mathematical_constants.hpp  thermodynamic_constants.hpp
include/eos/cubic_eos/: cubic_eos_base.hpp  isobaric_isothermal_state.hpp  isothermal_line.hpp  peng_robinson_eos.hpp  soave_redlich_kwong_eos.hpp  van_der_waals_eos.hpp  vapor_liquid_flash.hpp
include/eos/flash/: vapor_liquid_flash.hpp
include/eos/math/: cubic_equation.hpp  polynomial.hpp  polynomial_solver.hpp
include/eos/viscosity/: lucas_method.hpp
include/shirose/: alpha_functions.hpp  constants.hpp  correction_policy.hpp  cubic_eos.hpp  eos.hpp  flash.hpp  pr_eos.hpp  roots.hpp  srk_eos.hpp  vdw_eos.hpp
src/: CMakeLists.txt  cubic_equation.cpp  gsl_workspace_wrapper.hpp  lucas_method.cpp  polynomial.cpp  polynomial_solver.cpp
test/: CMakeLists.txt  CubicEosTest.cpp  cubic_eos_test.cpp  cubic_equation_test.cpp  eos_test.cpp  lucas_method_test.cpp  lucas_test.cpp  polynomial_solver_test.cpp  polynomial_test.cpp  vapor_liquid_flash_test.cpp
